assets/theme.css
/* ... */
.rtl .drawer--right {
  left: -350px;
  right: auto;
}
.js-drawer-open-right .drawer--right {
  display: block;
  -ms-transform: translateX(-350px);
  -webkit-transform: translateX(-350px);
  transform: translateX(-350px);
  opacity: 1;
  visibility: visible;
}
.no-csstransforms .js-drawer-open-right .drawer--right {
  right: 0;
}
.rtl .no-csstransforms .js-drawer-open-right .drawer--right {
  left: 0;
  right: auto;
}
.is-moved-by-drawer {
  transition: all 0.35s cubic-bezier(0.33, 0.59, 0.14, 1);
}
.no-csstransforms .js-drawer-open-left .is-moved-by-drawer {
  left: 350px;
}
.rtl .no-csstransforms .js-drawer-open-left .is-moved-by-drawer {
  right: 350px;
  left: auto;
}
.no-csstransforms .js-drawer-open-right .is-moved-by-drawer {
  left: -350px;
}
.rtl .no-csstransforms .js-drawer-open-right .is-moved-by-drawer {
  right: -350px;
  left: auto;
}
.page-element {
  position: relative;
}
.overflow-hidden-mobile .page-element {
  z-index: 9999;
}
.page-element.is-transitioning {
  z-index: 2;
}
.js-drawer-open-left .page-element.is-transitioning {
  z-index: 101;
}
.page-container {
  background-color: #fff;
}
.is-moved-by-drawer,
.js-drawer-open .is-moved-by-drawer {
  transition: all 0.35s cubic-bezier(0.33, 0.59, 0.14, 1);
}
.js-drawer-open-left .is-moved-by-drawer {
  box-shadow: #0000001a 0 0 5px;
}
.js-drawer-open-right .is-moved-by-drawer {
  box-shadow: #0000001a 0 0 -5px;
}
.drawer {
  overflow: visible;
  color: #000;
}
.drawer .show {
  opacity: 1 !important;
}
.drawer__inner {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 0 15px;
}
.collection-sort {
  display: inline-block;
  text-align: left;
  max-width: 150px;
}
.rtl .collection-sort {
  text-align: right;
}
.collection-sort + .collection-sort {
  margin-left: 20px;
}
.rtl .collection-sort + .collection-sort {
  margin-right: 20px;
  margin-left: inherit;
}
@media only screen and (max-width: 749px) {
  .collection-sort {
    width: 80%;
  }
  .collection-sort + .collection-sort {
    margin: var(--g-gutter) 0 0;
  }
}
.collection-sort__label {
  display: block;
  text-align: center;
}
@media only screen and (min-width: 750px) {
  .collection-sort__label {
    text-align: left;
    padding-left: 7px;
    margin-bottom: 0;
  }
  .rtl .collection-sort__label {
    text-align: right;
  }
  .rtl .collection-sort__label {
    padding-right: 7px;
    padding-left: inherit;
  }
}
.collection-sort__input {
  background-color: transparent;
  font-weight: 700;
  padding-top: 7px;
  padding-bottom: 7px;
  padding-left: 7px;
}
@media only screen and (max-width: 749px) {
  .collection-sort__input {
    width: 100%;
    border: 1px solid black;
  }
}
.apolloQty {
  color: #999;
}
.sidebar [data-toggle="collapse"] {
  cursor: pointer;
  position: relative;
}
.sidebar [data-toggle="collapse"]:after {
  font-family: icomoon !important;
  position: absolute;
  content: "\e92d";
  width: 30px;
  text-align: center;
  right: -10px;
  top: 0;
  bottom: 0;
  font-size: 10px;
}
.sidebar [aria-expanded="false"]:after {
  content: "\e93d";
}
.collection {
  margin-bottom: 30px;
}
.collection:last-child {
  margin-bottom: 0;
}
#shopbyvendor li,
#shopbytype li,
#categories_block li {
  text-transform: capitalize;
  padding: 8px 0;
}
#shopbyvendor li.active,
#shopbytype li.active,
#categories_block li.active {
  font-weight: 700;
}
#shopbyvendor li.active a,
#shopbytype li.active a,
#categories_block li.active a {
  color: var(--g-main);
}
.advanced-filter a {
  margin: 0;
  line-height: 0;
}
#ul_catalog_color .advanced-filter a {
  margin: 0;
}
.collection-sidebar .active-filter a {
  font-weight: 600;
}
.collection-sidebar a {
  color: var(--color-body-text);
  font-size: 14px;
}
.collection-sidebar > div {
  padding: 25px 0;
  border-bottom: 1px solid #e9e9e9;
}
.collection-sidebar > div::last-child {
  border-bottom: none;
}
.collection-sidebar > div .title_block {
  text-transform: uppercase;
  margin: 0;
  font-size: 18px;
  line-height: 23px;
}
.collection-sidebar #js-fillter {
  padding-top: 0;
  border-bottom: none;
}
.collection-sidebar #js-fillter .catalog_filters {
  padding: 25px 0;
  border-bottom: 1px solid #e9e9e9;
}
.collection-sidebar #js-fillter .catalog_filters.true {
  display: block !important;
}
@media (max-width: 990px) {
  .collection-1 .collection-card {
    min-height: 300px;
  }
}
.collection-card {
  position: relative;
  box-sizing: content-box;
  display: block;
  background-color: #fff;
  background-repeat: no-repeat;
  background-position: center top;
  background-size: cover;
  padding: 0;
  height: 100%;
  z-index: 1;
}
.collection-card:focus {
  z-index: 2;
}
.collection-card:after {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #000;
  opacity: 0.25;
  z-index: 1;
  transition: opacity 0.2s ease;
}
.collection-card:hover:after,
.collection-card:focus:after {
  opacity: 0.6;
}
.collection-card__meta {
  display: block;
  position: absolute;
  bottom: var(--g-gutter);
  left: 0;
  margin-right: var(--g-hgutter);
  z-index: 2;
}
.rtl .collection-card__meta {
  right: 0;
  left: auto;
}
@media only screen and (min-width: 750px) {
  .collection-card__meta {
    bottom: 40px;
  }
}
.collection-card__title {
  display: inline;
  background-color: var(--g-main);
  color: #fff;
  margin-bottom: var(--g-hgutter);
  padding: 2px var(--g-hgutter);
  letter-spacing: 0;
  font-size: 1.85714em;
  line-height: 1.4;
  -webkit-box-decoration-break: clone;
  -o-box-decoration-break: clone;
  box-decoration-break: clone;
}
@media only screen and (min-width: 990px) {
  .collection-card__title {
    font-size: 2.28571em;
  }
}
.collection-card__subtext {
  font-size: var(--g-font-size);
  font-weight: 700;
  margin: var(--g-hgutter) 0 0 var(--g-hgutter);
  font-size: 0.92857em;
  color: #fff;
}
.social-sharing .social-sharing__link{
  display:flex;
  align-items:center;
}
/* ... */

